--- a/WalletPlus/src/main/res/layout/dashboard_fragment.xml
+++ b/WalletPlus/src/main/res/layout/dashboard_fragment.xml
@@ -1,14 +1,25 @@
 <?xml version="1.0" encoding="utf-8"?>
 
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent">
+<LinearLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    android:orientation="vertical"
+    android:layout_width="fill_parent"
+    android:layout_height="fill_parent">
+
 
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_centerHorizontal="true"
-        android:layout_centerVertical="true"
-        android:text="@string/dashboard" />
+        android:textAppearance="?android:attr/textAppearanceLarge"
+        android:text="Sum of wallet Current amount:"
+        android:id="@+id/sumLabel"
+        android:layout_gravity="center_horizontal" />
 
-</RelativeLayout>
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textAppearance="?android:attr/textAppearanceLarge"
+        android:text=""
+        android:id="@+id/sum"
+        android:layout_gravity="center_horizontal" />
+</LinearLayout>
