--- a/WalletPlus/src/main/res/layout/wallet_list_item.xml
+++ b/WalletPlus/src/main/res/layout/wallet_list_item.xml
@@ -13,7 +13,7 @@
         android:layout_alignParentTop="true"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
-        android:layout_toLeftOf="@+id/actualAmount" />
+        android:layout_toLeftOf="@+id/currentAmount" />
 
     <TextView
         android:id="@+id/initialAmount"
@@ -23,10 +23,10 @@
         android:layout_below="@+id/walletName"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
-        android:layout_toLeftOf="@+id/actualAmount" />
+        android:layout_toLeftOf="@+id/currentAmount" />
 
     <TextView
-        android:id="@+id/actualAmount"
+        android:id="@+id/currentAmount"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textAppearance="?android:attr/textAppearanceLarge"
