--- a/WalletPlus/src/main/res/layout/wallet_details_fragment.xml
+++ b/WalletPlus/src/main/res/layout/wallet_details_fragment.xml
@@ -1,45 +1,44 @@
 <?xml version="1.0" encoding="utf-8"?>
 
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent" android:layout_height="match_parent">
+<info.korzeniowski.walletplus.widget.ScrollableCardRelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content">
 
     <TextView
         android:id="@+id/walletNameLabel"
-        android:text="@string/wallet_name_label"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_alignParentTop="true"
         android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true"
-        android:layout_alignBottom="@+id/walletName" />
+        android:layout_alignParentTop="true"
+        android:text="@string/walletNameLabel"
+        android:textAppearance="?android:attr/textAppearanceSmall" />
 
     <EditText
         android:id="@+id/walletName"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_alignParentTop="true"
-        android:layout_alignParentRight="true"
-        android:layout_alignParentEnd="true"
-        android:layout_toRightOf="@+id/walletNameLabel" />
+        android:layout_alignParentLeft="true"
+        android:layout_below="@+id/walletNameLabel"
+        android:hint="@string/walletNameHint"
+        android:inputType="textAutoCorrect"
+        android:textAppearance="?android:attr/textAppearanceMedium" />
 
     <TextView
         android:id="@+id/walletInitialAmountLabel"
-        android:text="@string/wallet_initial_amount_label"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/walletName"
         android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true"
-        android:layout_alignBottom="@+id/walletInitialAmount" />
+        android:layout_below="@+id/walletName"
+        android:text="@string/walletInitialAmountLabel"
+        android:textAppearance="?android:attr/textAppearanceSmall" />
 
     <EditText
         android:id="@+id/walletInitialAmount"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_alignParentLeft="true"
+        android:layout_below="@+id/walletInitialAmountLabel"
+        android:hint="@string/walletInitialAmount"
         android:inputType="numberDecimal"
-        android:ems="10"
-        android:layout_below="@+id/walletName"
-        android:layout_alignParentRight="true"
-        android:layout_alignParentEnd="true"
-        android:layout_toRightOf="@+id/walletNameLabel" />
-</RelativeLayout>
+        android:textAppearance="?android:attr/textAppearanceMedium" />
+</info.korzeniowski.walletplus.widget.ScrollableCardRelativeLayout>
