--- a/WalletPlus/src/main/res/values/dimens.xml
+++ b/WalletPlus/src/main/res/values/dimens.xml
@@ -2,4 +2,6 @@
 <resources>
 
     <dimen name="navigation_drawer_width">240dp</dimen>
+    <dimen name="cardContentPadding">15dp</dimen>
+    <dimen name="cardPadding">15dp</dimen>
 </resources>
