--- a/WalletPlus/src/main/res/values/styles.xml
+++ b/WalletPlus/src/main/res/values/styles.xml
@@ -1,5 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <style name="activated">
+    <style name="Card">
+        <item name="android:layout_width">match_parent</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:background">@drawable/selector_card_background</item>
+        <item name="android:padding">@dimen/cardContentPadding</item>
     </style>
 </resources>
