--- a/WalletPlus/src/main/res/values/styles.xml
+++ b/WalletPlus/src/main/res/values/styles.xml
@@ -1,5 +1,24 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
+    <style name="WalletPlusStyle" parent="Theme.AppCompat.Light">
+        <item name="android:actionBarStyle">@style/WalletPlusActionBar</item>
+        <item name="actionBarStyle">@style/WalletPlusActionBar</item>
+    </style>
+
+    <!-- ActionBar style -->
+    <style name="WalletPlusActionBar" parent="Widget.AppCompat.ActionBar.Solid">
+        <item name="android:background">@color/actionBarBackground</item>
+        <item name="background">@color/actionBarBackground</item>
+
+        <item name="android:titleTextStyle">@style/WalletPlusActionBarTitleText</item>
+        <item name="titleTextStyle">@style/WalletPlusActionBarTitleText</item>
+    </style>
+
+    <!-- ActionBar title text -->
+    <style name="WalletPlusActionBarTitleText" parent="TextAppearance.AppCompat.Widget.ActionBar.Title">
+        <item name="android:textColor">@color/white</item>
+    </style>
+
     <style name="Card">
         <item name="android:layout_width">match_parent</item>
         <item name="android:layout_height">wrap_content</item>
