--- a/WalletPlus/src/main/res/layout/activity_main.xml
+++ b/WalletPlus/src/main/res/layout/activity_main.xml
@@ -1,32 +1,25 @@
 <?xml version="1.0" encoding="utf-8"?>
 
-<android.support.v4.widget.DrawerLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/drawer_layout"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:layout_gravity="">
+    android:layout_height="match_parent">
 
     <!-- Content of View -->
-    <!-- Must be first child of DrawerLayout -->
     <FrameLayout
         android:id="@+id/content_frame"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background="@color/background"/>
+        android:background="@color/background" />
 
-    <!-- Content of left drawer -->
-    <!-- Must specify horizontal gravity, "start" to support RTL languages-->
-    <!-- layout_width = 240p - 320p px -->
-
+    <!-- Content of drawer -->
     <ListView
-        android:id="@+id/main_drawer"
+        android:id="@+id/drawer"
         android:layout_width="@dimen/navigation_drawer_width"
         android:layout_height="match_parent"
         android:layout_gravity="left"
-        android:background="#ff818181"
+        android:background="@color/drawerBackground"
         android:choiceMode="singleChoice"
         android:divider="@android:color/transparent"
         android:dividerHeight="0dp" />
-
 </android.support.v4.widget.DrawerLayout>
