Better dashboard fragment look

--- a/WalletPlus/src/main/res/layout/dashboard_fragment.xml
+++ b/WalletPlus/src/main/res/layout/dashboard_fragment.xml
@@ -1,25 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
 
-<LinearLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
     android:orientation="vertical"
-    android:layout_width="fill_parent"
-    android:layout_height="fill_parent">
-
+    android:padding="@dimen/cardPadding">
 
     <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textAppearance="?android:attr/textAppearanceLarge"
-        android:text="Sum of wallet Current amount:"
-        android:id="@+id/sumLabel"
-        android:layout_gravity="center_horizontal" />
-
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textAppearance="?android:attr/textAppearanceLarge"
-        android:text=""
-        android:id="@+id/sum"
-        android:layout_gravity="center_horizontal" />
+        android:id="@+id/totalAmount"
+        style="@style/Card"
+        android:gravity="center_horizontal"
+        android:textAppearance="?android:attr/textAppearanceLarge" />
 </LinearLayout>
