--- a/WalletPlus/src/main/res/values/color.xml
+++ b/WalletPlus/src/main/res/values/color.xml
@@ -9,11 +9,14 @@
     <color name="cardSelectedColor">#F8F8F8</color>
     <color name="background">#EEEEEE</color>
 
+    <!-- My colors -->
+    <color name="green">#B6DB49</color>
+    <color name="red">#FF4444</color>
+
     <!--Basics colors-->
     <color name="white">#FFFFFF</color>
     <color name="yellow">#FFFF00</color>
     <color name="fuchsia">#FF00FF</color>
-    <color name="red">#FF0000</color>
     <color name="silver">#C0C0C0</color>
     <color name="gray">#808080</color>
     <color name="olive">#808000</color>
@@ -22,7 +25,6 @@
     <color name="aqua">#00FFFF</color>
     <color name="lime">#00FF00</color>
     <color name="teal">#008080</color>
-    <color name="green">#008000</color>
     <color name="blue">#0000FF</color>
     <color name="navy">#000080</color>
     <color name="black">#000000</color>
