--- a/WalletPlus/src/main/res/values/color.xml
+++ b/WalletPlus/src/main/res/values/color.xml
@@ -1,6 +1,6 @@
 <resources>
     <!-- Style colors -->
-    <color name="actionBarBackground">#33B5E5</color>
+    <color name="actionBarBackground">#FF9909</color>
     <color name="drawerBackground">#FF818181</color>
 
     <!--Card colors -->
@@ -10,10 +10,10 @@
     <color name="background">#EEEEEE</color>
 
     <!-- My colors -->
-    <color name="green">#B6DB49</color>
+    <color name="green">#99cc00</color>
     <color name="red">#FF4444</color>
 
-    <!--Basics colors-->
+    <!--Basic colors-->
     <color name="white">#FFFFFF</color>
     <color name="yellow">#FFFF00</color>
     <color name="fuchsia">#FF00FF</color>
