--- a/WalletPlus/src/main/res/values/color.xml
+++ b/WalletPlus/src/main/res/values/color.xml
@@ -10,8 +10,9 @@
     <color name="background">#EEEEEE</color>
 
     <!-- My colors -->
-    <color name="green">#99cc00</color>
+    <color name="green">#99CC00</color>
     <color name="red">#FF4444</color>
+    <color name="blue">#0099CC</color>
 
     <!--Basic colors-->
     <color name="white">#FFFFFF</color>
@@ -25,7 +26,6 @@
     <color name="aqua">#00FFFF</color>
     <color name="lime">#00FF00</color>
     <color name="teal">#008080</color>
-    <color name="blue">#0000FF</color>
     <color name="navy">#000080</color>
     <color name="black">#000000</color>
 </resources>
