--- a/WalletPlus/src/main/res/layout/cashflow_list_item.xml
+++ b/WalletPlus/src/main/res/layout/cashflow_list_item.xml
@@ -4,74 +4,82 @@
     style="@style/Card">
 
     <TextView
-        android:id="@+id/fromWallet"
+        android:id="@+id/category"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true"
         android:layout_alignParentTop="true"
-        android:text="[...]"
-        android:textAppearance="?android:attr/textAppearanceMedium" />
+        android:textSize="@dimen/bigFontSize"
+        android:textStyle="bold" />
 
     <TextView
-        android:id="@+id/arrow"
+        android:id="@+id/fromWalletLabel"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignBottom="@+id/fromWallet"
-        android:layout_alignParentTop="true"
-        android:layout_toRightOf="@+id/fromWallet"
-        android:text="-->"
-        android:textAppearance="?android:attr/textAppearanceMedium" />
+        android:layout_alignBottom="@id/fromWallet"
+        android:layout_alignParentLeft="true"
+        android:paddingRight="@dimen/cashflowListLabelPadding"
+        android:text="@string/cashflowListFromWalletLabel"
+        android:textSize="@dimen/smallFontSize" />
+
+    <TextView
+        android:id="@+id/fromWallet"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@id/category"
+        android:layout_toRightOf="@id/fromWalletLabel"
+        android:textSize="@dimen/mediumFontSize" />
+
+    <TextView
+        android:id="@+id/toWalletLabel"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignBottom="@id/toWallet"
+        android:layout_alignParentLeft="true"
+        android:paddingRight="@dimen/cashflowListLabelPadding"
+        android:text="@string/cashflowListToWalletLabel"
+        android:textSize="@dimen/smallFontSize" />
 
     <TextView
         android:id="@+id/toWallet"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignBottom="@+id/arrow"
-        android:layout_alignParentTop="true"
-        android:layout_toRightOf="@+id/arrow"
-        android:text="[...]"
-        android:textAppearance="?android:attr/textAppearanceMedium" />
+        android:layout_below="@id/fromWallet"
+        android:layout_toRightOf="@id/toWalletLabel"
+        android:textSize="@dimen/mediumFontSize" />
 
     <TextView
-        android:id="@+id/category"
+        android:id="@+id/commentLabel"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_alignBottom="@+id/comment"
         android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true"
-        android:layout_below="@+id/fromWallet"
-        android:text="[...]"
-        android:textAppearance="?android:attr/textAppearanceMedium" />
+        android:paddingRight="@dimen/cashflowListLabelPadding"
+        android:text="@string/cashflowListCommentLabel"
+        android:textSize="@dimen/smallFontSize" />
 
     <TextView
-        android:id="@+id/comment"
+        android:id="@id/comment"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignBottom="@+id/category"
-        android:layout_below="@+id/toWallet"
-        android:layout_toRightOf="@+id/category"
-        android:text=""
-        android:textAppearance="?android:attr/textAppearanceSmall" />
+        android:layout_below="@id/toWallet"
+        android:layout_toRightOf="@id/commentLabel"
+        android:textSize="@dimen/mediumFontSize" />
 
     <TextView
         android:id="@+id/amount"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignParentEnd="true"
         android:layout_alignParentRight="true"
         android:layout_alignParentTop="true"
-        android:text="SimpleAmount"
-        android:textAppearance="?android:attr/textAppearanceLarge" />
+        android:textSize="@dimen/veryBigFontSize" />
 
     <TextView
         android:id="@+id/date"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignBottom="@+id/comment"
-        android:layout_alignParentEnd="true"
+        android:layout_alignParentBottom="true"
         android:layout_alignParentRight="true"
-        android:layout_below="@+id/amount"
-        android:text="SimpleDate"
-        android:textAppearance="?android:attr/textAppearanceSmall" />
-
+        android:gravity="center_horizontal"
+        android:textSize="@dimen/verySmallFontSize" />
 </RelativeLayout>
