--- a/WalletPlus/src/main/res/layout/category_list.xml
+++ b/WalletPlus/src/main/res/layout/category_list.xml
@@ -9,8 +9,11 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_gravity="left"
-        android:choiceMode="singleChoice"
+        android:descendantFocusability="afterDescendants"
         android:divider="@android:color/transparent"
-        android:dividerHeight="0dp" />
+        android:listSelector="@android:color/transparent"
+        android:cacheColorHint="@android:color/transparent"
+        android:dividerHeight="0dp"
+        android:groupIndicator="@null" />
 
 </LinearLayout>
