--- a/WalletPlus/src/main/res/layout/category_main_list_item.xml
+++ b/WalletPlus/src/main/res/layout/category_main_list_item.xml
@@ -1,10 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 
-<TextView xmlns:android="http://schemas.android.com/apk/res/android"
-    android:id="@+id/text"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="?android:attr/listPreferredItemHeight"
-    android:paddingStart="?android:attr/expandableListPreferredItemPaddingLeft"
-    android:gravity="center_vertical"
-    android:textAlignment="viewStart"
-    />
+    android:layout_height="match_parent">
+
+    <TextView
+        android:id="@+id/text"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentLeft="true"
+        android:gravity="left" />
+</RelativeLayout>
