--- a/WalletPlus/src/main/res/values/dimens.xml
+++ b/WalletPlus/src/main/res/values/dimens.xml
@@ -3,8 +3,8 @@
 
     <dimen name="navigation_drawer_width">240dp</dimen>
     <dimen name="cardContentPadding">15dp</dimen>
-    <dimen name="cardPadding">15dp</dimen>
-
+    <dimen name="cardPadding">15dp</dimen> <!-- after changed, change doubleCardPadding value -->
+    <dimen name="doubleCardPadding">30dp</dimen>
     <!-- font size -->
     <dimen name="verySmallFontSize">9sp</dimen>
     <dimen name="smallFontSize">12sp</dimen>
