Make working Robolectric test + Move Fest Android to AssertJ Android + Adopt Wallet Fragments to Butterknife

--- a/WalletPlus/src/main/res/layout/card_list.xml
+++ b/WalletPlus/src/main/res/layout/card_list.xml
@@ -9,4 +9,5 @@
     android:dividerHeight="10dp"
     android:padding="@dimen/cardPadding"
     android:scrollbars="none"
+    android:choiceMode="none"
     android:listSelector="@drawable/selector_card_background"/>
