--- a/WalletPlus/src/main/res/layout/category_list.xml
+++ b/WalletPlus/src/main/res/layout/category_list.xml
@@ -1,19 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<ExpandableListView xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/superList"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
-
-    <ExpandableListView
-        android:id="@+id/superList"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_gravity="left"
-        android:descendantFocusability="afterDescendants"
-        android:divider="@android:color/transparent"
-        android:listSelector="@android:color/transparent"
-        android:cacheColorHint="@android:color/transparent"
-        android:dividerHeight="0dp"
-        android:groupIndicator="@null" />
-
-</LinearLayout>
+    android:layout_height="match_parent"
+    android:cacheColorHint="@android:color/transparent"
+    android:descendantFocusability="afterDescendants"
+    android:divider="@android:color/transparent"
+    android:dividerHeight="0dp"
+    android:groupIndicator="@null"
+    android:listSelector="@android:color/transparent" />
