--- a/WalletPlus/src/main/res/layout/wallet_details.xml
+++ b/WalletPlus/src/main/res/layout/wallet_details.xml
@@ -17,6 +17,8 @@
             android:layout_height="wrap_content"
             android:layout_alignParentLeft="true"
             android:layout_alignParentStart="true"
+            android:paddingLeft="4dp"
+            android:paddingRight="4dp"
             android:paddingTop="16dp"
             android:text="@string/walletNameLabel"
             android:textSize="@dimen/smallFontSize"
@@ -29,9 +31,11 @@
             android:layout_alignParentLeft="true"
             android:layout_alignParentStart="true"
             android:layout_below="@+id/walletNameLabel"
+            android:layout_marginBottom="8dp"
             android:hint="@string/walletNameLabel"
             android:inputType="textAutoCorrect"
-            android:paddingBottom="16dp"
+            android:paddingBottom="8dp"
+            android:paddingTop="8dp"
             android:textSize="@dimen/mediumFontSize" />
 
         <TextView
@@ -41,6 +45,8 @@
             android:layout_alignParentLeft="true"
             android:layout_alignParentStart="true"
             android:layout_below="@+id/walletName"
+            android:paddingLeft="4dp"
+            android:paddingRight="4dp"
             android:paddingTop="16dp"
             android:text="@string/walletInitialAmountLabel"
             android:textSize="@dimen/smallFontSize"
@@ -53,9 +59,11 @@
             android:layout_alignParentLeft="true"
             android:layout_alignParentStart="true"
             android:layout_below="@+id/walletInitialAmountLabel"
+            android:layout_marginBottom="8dp"
             android:hint="@string/walletInitialAmountLabel"
             android:inputType="numberDecimal"
-            android:paddingBottom="16dp"
+            android:paddingBottom="8dp"
+            android:paddingTop="8dp"
             android:textSize="@dimen/mediumFontSize" />
     </RelativeLayout>
 </ScrollView>
